# ghostnote

./: .env.example  .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  vercel.json
.github/workflows/: static.yml
landing/: index.html
src/: App.tsx  AuthScreen.tsx  HistoryScreen.tsx  MeetingScreen.tsx  api.ts  cognito.ts  icons.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  deepgram.rs  dynamodb.rs  keys.rs  lib.rs  main.rs  openai.rs  screenshot.rs
src/graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
